<resources>
    <string name="app_name">Choithrams</string>
    <string name="app_version">Version 1.9.0</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Logo">logo</string>
    <string name="Username">Username</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="do_you_want_to_scan_next">Do you want to scan next ?</string>
    <string name="title_activity_pending_approval_screen">PendingApprovalScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
</resources>